--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "dotenv": "^16.4.5",
     "lucide-react": "^0.453.0",
     "next": "15.0.1",
-    "react-dom": "19.0.0-rc-69d4b800-20241021",
+    "react-dom": "^18.3.1",
     "react-toastify": "^10.0.6"
   },
   "devDependencies": {
