--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^16.4.5",
     "lucide-react": "^0.453.0",
     "next": "15.0.1",
+    "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-toastify": "^10.0.6"
   },
@@ -25,8 +26,5 @@
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
-  },
-  "engines": {
-  "node": ">=18.18.0"
-}
+  }
 }
