--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next": "15.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-elfsight-widget": "^1.1.2",
     "react-toastify": "^10.0.6"
   },
   "devDependencies": {
